pos_ctrl/third_party/leadshine/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//专用IO
DMC_API short __stdcall dmc_set_inp_mode(WORD CardNo,WORD axis,WORD enable,WORD inp_logic);//设置INP信号
DMC_API short __stdcall dmc_get_inp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *inp_logic);//读取设置INP信号
DMC_API short __stdcall dmc_set_rdy_mode(WORD CardNo,WORD axis,WORD enable,WORD rdy_logic);//设置RDY信号
DMC_API short __stdcall dmc_get_rdy_mode(WORD CardNo,WORD axis,WORD* enable,WORD* rdy_logic);//读取设置RDY信号
DMC_API short __stdcall dmc_set_erc_mode(WORD CardNo,WORD axis,WORD enable,WORD erc_logic,WORD erc_width,WORD erc_off_time);//设置ERC信号
DMC_API short __stdcall dmc_get_erc_mode(WORD CardNo,WORD axis,WORD *enable,WORD *erc_logic, WORD *erc_width,WORD *erc_off_time);//读取设置ERC信号
DMC_API short __stdcall dmc_set_alm_mode(WORD CardNo,WORD axis,WORD enable,WORD alm_logic,WORD alm_action);//设置ALM信号
DMC_API short __stdcall dmc_get_alm_mode(WORD CardNo,WORD axis,WORD *enable,WORD *alm_logic,WORD *alm_action);//读取设置ALM信号
DMC_API short __stdcall dmc_write_sevon_pin(WORD CardNo,WORD axis,WORD on_off);//输出SEVON信号
DMC_API short __stdcall dmc_read_sevon_pin(WORD CardNo,WORD axis);//读取SEVON信号
DMC_API short __stdcall dmc_read_rdy_pin(WORD CardNo,WORD axis);//读取RDY状态
DMC_API short __stdcall dmc_write_erc_pin(WORD CardNo,WORD axis,WORD on_off);//控制ERC信号输出
DMC_API short __stdcall dmc_read_erc_pin(WORD CardNo,WORD axis);
 	
DMC_API short __stdcall dmc_write_sevrst_pin(WORD CardNo,WORD axis,WORD on_off);//输出伺服复位信号
DMC_API short __stdcall dmc_read_sevrst_pin(WORD CardNo,WORD axis);//读伺服复位信号
/*********************位置计数控制***************************/
//当前位置(脉冲)
DMC_API short __stdcall dmc_set_position(WORD CardNo,WORD axis,long current_position);
DMC_API long __stdcall dmc_get_position(WORD CardNo,WORD axis);
/**************************运动状态********************************/
//轴状态
DMC_API double __stdcall dmc_read_current_speed(WORD CardNo,WORD axis);	//读取指定轴的当前速度(脉冲)
DMC_API double __stdcall dmc_read_vector_speed(WORD CardNo);	//读取当前卡的插补速度
DMC_API long __stdcall dmc_get_target_position(WORD CardNo,WORD axis);	//读取指定轴的目标位置
DMC_API short __stdcall dmc_get_target_position_unit(WORD CardNo,WORD axis, double * pos);//读取指定轴的目标位置(当量)
DMC_API short __stdcall dmc_check_done(WORD CardNo,WORD axis);	//读取指定轴的运动状态
DMC_API DWORD __stdcall dmc_axis_io_status(WORD CardNo,WORD axis);//读取指定轴有关运动信号的状态
DMC_API short __stdcall dmc_stop(WORD CardNo,WORD axis,WORD stop_mode);//单轴停止
DMC_API short __stdcall dmc_check_done_multicoor(WORD CardNo,WORD Crd);//插补运动状态
DMC_API short __stdcall dmc_stop_multicoor(WORD CardNo,WORD Crd,WORD stop_mode);//停止插补器
DMC_API short __stdcall dmc_emg_stop(WORD CardNo);//紧急停止所有轴
DMC_API short __stdcall dmc_LinkState(WORD CardNo,WORD* State);//连接状态
DMC_API short __stdcall dmc_set_factor_error(WORD CardNo,WORD axis,double factor,long error);
DMC_API short __stdcall dmc_get_factor_error(WORD CardNo,WORD axis,double* factor,long* error);
DMC_API short __stdcall dmc_check_success_pulse(WORD CardNo,WORD axis);
DMC_API short __stdcall dmc_check_success_encoder(WORD CardNo,WORD axis);