DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    '伺服专用IO
    ' <summary>
    ' 设置INP模式  INP信号会影响到轴的运动状态（check_done)
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能状态：0-禁止，1-允许</param>
    ' <param name="inp_logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_inp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal inp_logic As UInt16) As Int16      '设置INP信号
    ' <summary>
    ' 读取INP模式  INP信号会影响到轴的运动状态（check_done)
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能状态：0-禁止，1-允许</param>
    ' <param name="inp_logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_inp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef inp_logic As UInt16) As Int16  '读取设置INP信号
    Declare Function dmc_set_rdy_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal rdy_logic As UInt16) As Int16
    Declare Function dmc_get_rdy_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef rdy_logic As UInt16) As Int16
    Declare Function dmc_set_erc_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal erc_logic As UInt16, ByVal erc_width As UInt16, ByVal erc_off_time As UInt16) As Int16   '设置ERC信号
    Declare Function dmc_get_erc_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef erc_logic As UInt16, ByRef erc_width As UInt16, ByRef erc_off_time As UInt16) As Int16   '读取设置ERC信号
    ' <summary>
    ' 设置ALM模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能状态：0-禁止，1-允许</param>
    ' <param name="alm_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="alm_action">制动方式：0-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_alm_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal alm_logic As UInt16, ByVal alm_action As UInt16) As Int16 '设置ALM信号
    ' <summary>
    ' 读取ALM模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能状态：0-禁止，1-允许</param>
    ' <param name="alm_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="alm_action">制动方式：0-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_alm_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef alm_logic As UInt16, ByRef alm_action As UInt16) As Int16     '读取设置ALM信号
    ' <summary>
    ' 写伺服使能信号输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="on_off">输出状态：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal on_off As UInt16) As Int16       '输出SEVON信号
    ' <summary>
    ' 读伺服使能信号输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>输出状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16         '读取SEVON信号
    ' <summary>
    ' 读伺服准备好信号输入口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>输入状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_rdy_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16           '读取RDY状态
    ' <summary>
    ' 写伺服误差清除输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="on_off">输出状态：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_write_erc_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal on_off As UInt16) As Int16       '控制ERC信号输出 
    ' <summary>
    ' 读伺服误差清除输出口
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>输出状态：0-低电平，1-高电平</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_erc_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16       '读取控制ERC信号输出 
    Declare Function dmc_write_sevrst_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal on_off As UInt16) As Int16
    Declare Function dmc_read_sevrst_pin Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16

    '运动状态
    ' <summary>
    ' 读取当前速度
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>速度值</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_current_speed Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Double      '读取指定轴的当前速度
    ' <summary>
    ' 读取当前插补速度
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <returns>插补速度</returns>
    ' <remarks></remarks>
    Declare Function dmc_read_vector_speed Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Double    '读取当前卡的插补速度
    ' <summary>
    ' 读取当前指令位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>位置值</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_position Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32      '读取指定轴的当前位置
    ' <summary>
    ' 设置指令位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="current_position">位置值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_position Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal current_position As Int32) As Int16   '设定指定轴的当前位置
    ' <summary>
    ' 检测轴的运动状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>运动状态：0-运动，1-停止</returns>
    ' <remarks></remarks>
    Declare Function dmc_check_done Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16     '读取指定轴的运动状态
    ' <summary>
    ' 检测单段插补运动状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <returns>运动状态：0-运动，1-停止</returns>
    ' <remarks></remarks>
    Declare Function dmc_check_done_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16) As Int16
    ' <summary>
    ' 轴IO状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>轴IO状态：0 ALM 1 EL+ 2 EL- 3 EMG 4 ORG 6 SL+ 7 SL- 8 INP 9 EZ 10 RDY 11 DSTP</returns>
    ' <remarks></remarks>
    Declare Function dmc_axis_io_status Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As UInt32    '读取指定轴有关运动信号的状态
    ' <summary>
    ' 停止单轴运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="stop_mode">停止模式：0-减速停止，1-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_stop Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal stop_mode As UInt16) As Int16       '单轴停止
    ' <summary>
    ' 停止单段插补运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <param name="stop_mode">停止模式：0-减速停止，1-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_stop_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal stop_mode As UInt16) As Int16
    ' <summary>
    ' 急停所有轴运动
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_emg_stop Lib "LTDMC.dll" (ByVal CardNo As UInt16) As Int16      '紧急停止所有轴
    ' <summary>
    ' 读取目标位置
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>目标位置值</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_target_position Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int32      '读取目标位置
    Declare Function dmc_get_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef pos As Double) As Int32      '读取目标位置
    '检测轴到位状态
    ' <summary>
    ' 设置误差带
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="factor">编码器系数</param>
    ' <param name="pos_error">误差带</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_factor_error Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal factor As Double, ByVal pos_error As Int32) As Int16
    ' <summary>
    ' 读取误差带
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="factor">编码器系数</param>
    ' <param name="pos_error">误差带</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_factor_error Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef factor As Double, ByRef pos_error As Int32) As Int16
    ' <summary>
    ' 检测指令位置到位 超时100ms
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>到位状态：0-不在误差带范围内，1-在误差带范围内</returns>
    ' <remarks></remarks>
    Declare Function dmc_check_success_pulse Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16
    ' <summary>
    ' 检测反馈位置到位 超时100ms
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <returns>到位状态：0-不在误差带范围内，1-在误差带范围内</returns>
    ' <remarks></remarks>
    Declare Function dmc_check_success_encoder Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16) As Int16

    '3800 5800专用 主卡与接线盒通讯状态
    ' <summary>
    ' 读取通讯状态
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="state">状态：0-连接，1-断开</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_LinkState Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByRef state As UInt16) As Int16      '连接状态
